addressed sonar issues
# Conflicts:
#	ql/src/java/org/apache/hadoop/hive/ql/metadata/Table.java